--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -18,7 +18,7 @@ header{
 
 .navItem{
     padding-top: 5%;
-    margin-left: 2%;
+    margin-left: 8%;
     text-decoration: none;
     font-size: 25px;
     color: black;
@@ -52,20 +52,31 @@ header{
 
 
 /**************************************** Blog Styles ****************************************/
+
+body{
+    background-color: rgb(131, 103, 32);
+}
+
 .topPicContainer{
     margin-top: 3%;
-    margin-bottom: 30%;
+    margin-bottom: 50%;
     
 }
 
 .blog-topPic{
     position:absolute;
     width: 100%;
-    height: 60%;
+    height: 80%;
 }
 
 .blog-Name{
-    position: relative;
-    z-index: 1;
-    margin-top: 10%;
+    position: absolute;
+    z-index: 2;
+    width: 32%;
+    margin-top: 29%;
+    margin-left: 32%;
+    color: #ffffff;
+    font-size: 65px;
+    text-align: center;
 }
+
