--- a/Styles/blog.css
+++ b/Styles/blog.css
@@ -30,19 +30,21 @@ header{
 }
 
 .contact{
-    margin-left: 22%;
+    margin-left: 30%;
     padding:1%;
     font-size: 25px;
     text-decoration: none;
-    color: black;
-    border: 2px solid black;
-    background-color: #f0f0f0;
+    color: rgb(206, 2, 2);
+    border: 2px solid rgb(252, 0, 0);
+    background-color: #ffffff;
 }
 
 .contact:hover{
     font-size: 30px;
-    color: aliceblue;
-    background-color: black;
+    color: rgb(255, 255, 255);
+    background-color: rgb(243, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
+
 }
 
 .Blog{
@@ -51,21 +53,22 @@ header{
 }
 
 
-/**************************************** Blog Styles ****************************************/
+/**************************************** Blog Top Picture Style ****************************************/
 
 body{
+    width: 95%;
     background-color: rgb(131, 103, 32);
+    margin: 0 auto;
 }
-
+    
 .topPicContainer{
     margin-top: 3%;
     margin-bottom: 50%;
-    
 }
-
+    
 .blog-topPic{
     position:absolute;
-    width: 100%;
+    width: 90%;
     height: 80%;
 }
 
@@ -74,9 +77,90 @@ body{
     z-index: 2;
     width: 32%;
     margin-top: 29%;
-    margin-left: 32%;
+    margin-left: 28%;
     color: #ffffff;
     font-size: 65px;
     text-align: center;
 }
+        
 
+/************************************************* Blog Grid Styles *************************************************/
+.slideshow-container {
+    position: relative;
+    margin-left: 3%;
+    overflow: hidden;
+    width: 85%;
+    /* margin-right: 2%; */
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    margin-left: 6%;
+}
+
+.slide {
+    min-width: 33.33%;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.slide-Name{
+    position: absolute;
+    z-index: 3;
+    max-width: 10%;
+    margin-top: 35.5%;
+    margin-left: 10%;
+    padding: 1% 2% 1% 2%;
+    font-size: 30px;
+    color: #fffefe;
+    background-color: #000000;
+}
+
+.slide img {
+    width: 85%;
+    height: 90%;
+    vertical-align: middle;
+}
+.third{
+    margin-right: 2%;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: 0px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 80px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    z-index: 3;
+}
+
+.next {
+    left: 96%;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    right: 95%;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+/************************************************* Blog Grid Styles *************************************************/
+footer{
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 5%;
+    background-color: #000000;
+}
