--- a/Styles/index.css
+++ b/Styles/index.css
@@ -284,6 +284,9 @@ body{
 /*************************************************************************** Footer Styles ***************************************************************************/
 
 footer{
-    width: 100%;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 5%;
     background-color: black;
 }
