--- a/Styles/shop.css
+++ b/Styles/shop.css
@@ -51,14 +51,15 @@ header{
 }
 
 
-
-/**************************************** Shop styles ****************************************/
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     background-color: tan;
+    width: 95%;
 }
+
+/**************************************** Shop Title styles ****************************************/
 
 .shopName {
     display: flex;
@@ -77,11 +78,13 @@ body {
     width: 16%;
     margin-left: 25%;
 }
+
+/**************************************** Shop styles ****************************************/
+
 .container{
     width: 90%;
     margin: 0 auto;
     margin-bottom: 5%;
-    
 }
 
 a{
@@ -147,5 +150,5 @@ a{
     color: white;
     text-align: center;
     padding: 10px 0;
-    margin-top: 20px;
+    margin-top: 5%;
 }
