--- a/Fair-Game_Offical-main/Styles/portfolio.css
+++ b/Fair-Game_Offical-main/Styles/portfolio.css
@@ -72,6 +72,12 @@ body {
     width: 50%;
     height: 50%;
 }
+
+.image-container .image-container2 {
+   width: 80%;
+   height: 300px;
+}
+
 .description {
     background-color: hsl(183, 14%, 72%);
     width: 100%;
@@ -179,6 +185,7 @@ p {
     flex-direction: column;
     align-items: center;
     margin: 20px 0;
+    margin-top: 80px;
 
     
 }
